Fix/url encoding hosts (#43)
* added unescape of all vhost inputs

* added alarm handlers

* added alarm path

* changed seeding to allow multiple vhosts, moved some values to const for easier use

* removed unnecessary parameter

* updated docs
